# ScoreGuide

./: .gitignore  CLAUDE.md  Caddyfile  Dockerfile.backend  Dockerfile.frontend-svelte  README.md  docker-compose.override.yaml  docker-compose.prod.yaml  docker-compose.yaml
.github/workflows/: deploy.yaml  frontend.yml  test.yml  test_docker.yaml
backend/: .coveragerc  README.md  pyproject.toml
backend/app/: agent.py  config.py  credits.py  db.py  file_helper.py  imslp.py  main.py  rate_limit.py  users.py
backend/migrations/: env.py
backend/migrations/versions/: 4a2b2b8b97b4_add_short_description_fr_and_long_.py  4a6222a48c48_add_last_login_to_user.py  6df28f7fbc33_initial_migration.py
backend/scripts/: run.sh
backend/tests/: conftest.py  test_agent.py  test_agent_extra.py  test_credits.py  test_db_extra.py  test_endpoints.py  test_imslp.py  test_imslp_utils_extra.py  test_main.py  test_users.py
frontend-svelte/ui/: .gitignore  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.ts  vite.config.ts
frontend-svelte/ui/messages/: en.json  fr.json
frontend-svelte/ui/src/: app.css  app.html  hooks.client.ts  hooks.server.ts
frontend-svelte/ui/src/lib/: pdfCache.ts  types.ts
frontend-svelte/ui/src/routes/: +layout.server.ts  +layout.svelte  (+2 more)
frontend/tests/: test_admin.py
frontend/ui/: admin.py  app.py  database.py  reader.py
infrastructure/: main.tf  mcp-readonly.sql
postgres-init/: 01_mcp_readonly.sql
shared/: README.md
shared/shared/: responses.py  scores.py  settings.py  user.py
shared/tests/: test_settings.py
(+24 files in other folders)
