[project]
name = "app"
version = "0.1.0"
description = "Read and play music with AI"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi[standard]>=0.119.0",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.2.250926",
    "pathlib>=1.0.1",
    "pydantic>=2.12.3",
    "pydantic-ai>=1.2.1",
    "pydantic-ai-slim[duckduckgo,google,mcp]>=1.2.1",
    "sqlalchemy[asyncio]>=2.0.44",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.37.0",
    "shared",
    "pyjwt>=2.10.1",
    "pwdlib[argon2]>=0.3.0",
    "asyncpg>=0.31.0",
    "psycopg2-binary>=2.9.11",
    "alembic>=1.17.2",
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
]
[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
    "pytest>=7.4.4",
    "pyyaml>=6.0.2",
    "black>=25.9.0",
    "pylint>=4.0.2",
    "mypy>=1.18.2",
    "pytest-mock>=3.15.1",
    "pytest-asyncio>=1.2.0",
    "anyio>=4.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"  
known_first_party = ["shared", "app"]

[tool.mypy]
ignore_missing_imports = true

[tool.basedpyright]
typeCheckingMode = "standard"
reportUnusedFunction = false

[tool.uv.sources]
ui = {workspace = true}
shared = {workspace = true}


[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'"
]
